<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EPI Client</string>
    <string name="action_settings">Preferences</string>
    <string name="action_synch">Synch</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>

    <!-- Login -->
    <string name="login_username">User Name</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>

    <!-- Enrollment Form Questions -->
    <string name="enrollment_label_ProjectId">Project ID</string>
    <string name="enrollment_label_EpiNo">EPI Card Number</string>
    <string name="enrollment_label_IsChildNamed">Child named</string>
    <string name="enrollment_label_ChildName">"Child's name"</string>
    <string name="enrollment_label_ChildFirstName">"Child's first name"</string>
    <string name="enrollment_label_ChildLastName">"Child's last name"</string>
    <string name="enrollment_label_FatherName">"Father's name"</string>
    <string name="enrollment_label_FatherFirstName">"Father's first name"</string>
    <string name="enrollment_label_FatherLastName">"Father's last name"</string>
    <string name="enrollment_label_ChildGender">Child  Gender</string>
    <string name="enrollment_label_ChildDOB">Child Date of birth or age</string>
    <string name="enrollment_label_Days">Days</string>
    <string name="enrollment_label_Weeks">Weeks</string>
    <string name="enrollment_label_Months">Months</string>
    <string name="enrollment_label_Years">Years</string>
    <string name="enrollment_label_Address">Address</string>
    <string name="enrollment_label_AddressHouseNo">House No</string>
    <string name="enrollment_label_AddressStreet">Street</string>
    <string name="enrollment_label_AddressSector">Sector</string>
    <string name="enrollment_label_AddressColony">Colony</string>
    <string name="enrollment_label_AddressTown">Town</string>
    <string name="enrollment_label_AddressTownOther">Other Town</string>
    <string name="enrollment_label_AddressUC">Union Council</string>
    <string name="enrollment_label_AddressLandmark">Closest Landmark</string>
    <string name="enrollment_label_AddressCity">City</string>
    <string name="enrollment_label_AddressOtherCity">OtherCity</string>
    <string name="enrollment_label_VaccineGivenName">Which vaccine did the child receive today</string>
    <string name="enrollment_label_WasPolioGiven">Polio vaccine given</string>
    <string name="enrollment_label_VaccinationDate">Date of Vaccination</string>
    <string name="enrollment_label_NextVaccine">Next vaccine</string>
    <string name="enrollment_label_NextVaccineDate">Allotted date of next visit</string>
    <string name="enrollment_label_SMSReminderNeeded">Would you like to receive SMS reminders?</string>
    <string name="enrollment_label_PrimaryContactNo">Mobile No.</string>
    <string name="enrollment_label_SecondaryContactNo">Landline/Secondary mobile No.</string>
    <string name="enrollment_label_LotteryNeeded">Lottery scheme?</string>
    <string name="enrollment_btn_Submit">Submit</string>
    <string name="enrollment_btn_Address">Fill Address Details</string>
    <string name="title_activity_enrollment">Enrollment</string>
    <string name="enrollment_label_ManualId">3-digit EPI No.</string>
    <string name="title_activity_date_time_picker">Select Date</string>
    <string name="form_enrollment">Enrollment</string>
    <string name="form_followup">Follow Up</string>
    <string name="form_vacc_overview">Immunization History</string>
    <string name="label_calendar">Calendar</string>
    <string name="label_age">Age</string>
    <string name="title_activity_calculate_age_acitivity">Calculate Date Of Birth</string>
    <string name="label_calculate">Calculate</string>
    <string name="enrollment_label_WasPCVGiven">PCV given</string>
    <string name="enrollment_label_SMS_Reminder">SMS Reminder</string>
    <string name="label_submit">Submit</string>
    <string name="enrollment_label_SecondaryNo">Landline No.</string>
    <string name="enrollment_label_PrimaryNo">Mobile No.</string>
    <string name="title_activity_follow_up">Follow Up</string>
    <string name="followup_label_FetchData">Fetch Data</string>
    <string name="application_ok">Ok</string>
    <string name="application_cancel">Cancel</string>
    <string name="application_submit">Submit</string>
    <string name="application_no">No</string>
    <string name="application_success">Success</string>
    <string name="application_emptyString"></string>
    <string name="appliaction_user_type">User Type</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_nfc_writer">Write to tag</string>
    <string name="communication_protocols">Communication Protocol</string>
    <string name="title_activity_address">Address Details</string>
    <string name="title_activity_fragment_test">FragmentTestActivity</string>
    <string name="title_activity_vaccination_overview">Immunization History</string>
    <string name="title_activity_vaccine_schedule_details">Vaccine Details</string>
    <string name="title_activity_immunizaion_registry">Immunizaion Registry</string>
    <string name="title_activity_about_ativity">About</string>
    <string name="title_activity_biodata">Biodata</string>
    <string name="title_activity_program">Program Details</string>
    <string name="title_activity_storekeeper">Storekeeper Form</string>
    <string name="title_activity_id_change">Update Child ID</string>
    <string name="buttonFollowup">Follow Up</string>
    <string name="btnEnrollment">Enrollment</string>
    <string name="btnUpdateId">Update Child ID</string>
    <string name="storeChildId">Enter Child ID</string>
    <string name="storeViewId">Child ID</string>
    <string name="mainBtnClose">Exit</string>
    <string name="mainViewHeading">Main Menu</string>
    <string name="bioViewID">ID</string>
    <string name="bioViewEpi">EPI No</string>
    <string name="bioViewFather">Father First Name</string>
    <string name="bioViewFatherLast">Father Last Name</string>
    <string name="bioViewChildFirst">Child First Name</string>
    <string name="bioViewChildLast">Child Last Name</string>
    <string name="vaccinationViewSelect">Select Vaccine(s)</string>
    <string name="vaccinationViewBCG">BCG</string>
    <string name="vacViewPen">Pentavalent:</string>
    <string name="vacViewP1">P1</string>
    <string name="vacViewP2">P2</string>
    <string name="vacViewP3">P3</string>
    <string name="vacViewMeasles">Measles:</string>
    <string name="vacViewM1">M1</string>
    <string name="vacViewM2">M2</string>
    <string name="vacViewPolio">Polio:</string>
    <string name="vacViewOPV0">OPV0</string>
    <string name="vacViewOPV1">OPV1</string>
    <string name="vacViewOPV2">OPV2</string>
    <string name="vacViewOPV3">OPV3</string>
    <string name="vacViewPCV">Pneumococcal conjugate (PCV)</string>
    <string name="vacViewPCV1">PCV1</string>
    <string name="vacViewPCV2">PCV2</string>
    <string name="vacViewPCV3">PCV3</string>
    <string name="enrollViewBio">Biodata</string>
    <string name="enrollViewAddress">Address</string>
    <string name="enrollViewReminder">Reminder</string>
    <string name="btnScan">Scan</string>
    <string name="btnFetch">Fetch</string>
    <string name="followViewEPI">EPI No</string>
    <string name="followViewDOB">Date Of Birth</string>
    <string name="followViewChild">Child\'s Name</string>
    <string name="followViewFather">Father\'s Name</string>
    <string name="followCheckLottery">Lottery</string>
    <string name="followCHKSMS">SMS</string>
    <string name="followViewMobile">Mobile Number</string>
    <string name="followViewLandline">Landline Number</string>
    <string name="followViewID">Old ID:</string>
    <string name="idnetViewNID">New ID:</string>
    <string name="btnUpdate">Update</string>
    <string name="btnBack">Back</string>
    <string name="loginViewhead">Welcome to Zindagi Mehfooz</string>
    <string name="loginViewuser">User Name</string>
    <string name="loginViewPass">Password</string>
    <string name="loginViewRole">Role</string>
    <string name="storeKeeperHead">Storekeeper Application</string>
    <string name="storeViewLottry">Following Lotteries are available:</string>
    <string name="followViewCode">Code</string>
    <string name="followViewAmount">Amount(Rs.)</string>
    <string name="storeViewSelected">Selected</string>
    <string name="btnConsume">Consume</string>
    <string name="appSynced">Application Synced</string>
    <string name="editMobileDigits">11 Digits Required</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="logoutText">Are you sure you want to logout?</string>
    <string name="exitText">Are you sure you want to Exit?</string>
    <string name="title_activity_vaccination_details">Vaccination Details</string>
    <string name="txtStatus">Status:</string>
    <string name="txtCentre">Centre:</string>
    <string name="errorMsg">Row is not Editable:</string>
    <string name="enrollProgDetail">Program Details</string>
    <string name="btnCalendar">Calendar</string>
    <string name="ActivitySchedule">Schedule</string>
    <string name="date">Date: </string>
    <string name="VacName">Vaccine: </string>
    <string name="btnRefresh">Refresh</string>
    <string name="minDate">Date cannot be less than Jan 1st 2010</string>

</resources>