<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabVaccine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lavender"
    android:orientation="vertical" >
               		
               		<TableLayout 
               		    android:id="@+id/layoutVaccine"
               		    android:layout_width="match_parent"
               		    android:layout_height="match_parent">
               		    <TableRow >

               		        <TextView
               		            android:id="@+id/txtViewSelectVaccine"
               		            android:layout_marginTop="10dp"
               		            android:paddingLeft="10px"
               		            android:text="@string/vaccinationViewSelect"
               		            android:textColor="@color/PaleBlue"
               		            android:textStyle="bold" />
               		        
               		    </TableRow>
               		    <!-- BCG Starts here -->
               		    <TableRow 
               		       style="@style/VaccineCheckoxRow">>
			
               		        <CheckBox
               		            android:id="@+id/chkBoxBCG"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vaccinationViewBCG" />
               		        
               		    </TableRow>
               		    
               		    <TableRow 
               		        android:layout_width="match_parent"
               		        android:weightSum="1"
							style="@style/HorizontalDividerLayout">
               		        <View
               		            android:layout_weight="1"
               		            style="@style/HorizontalDividerBar"/>               		        
               		    </TableRow>
               		    
               		    <!-- BCG Ends here -->
               		    
               		    <!-- Penta Starts here -->
               		    <TableRow 
               		        style="@style/VaccineTitleRow">
               		        
               		        	<TextView
               		        	    android:id="@+id/txtViewPentaVaccine"
               		        	    style="@style/ThemeTextLeftPadding"
               		        	    android:text="@string/vacViewPen"
               		        	    android:textColor="@color/PaleBlue" />

               		     </TableRow>

               		    <TableRow
               		        style="@style/VaccineCheckoxRow">

               		        <CheckBox
               		            android:id="@+id/chkBoxP1"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewP1" />

               		        <CheckBox
               		            android:id="@+id/chkBoxP2"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewP2" />

               		        <CheckBox
               		            android:id="@+id/chkBoxP3"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewP3" />
               		        
               		    </TableRow>
               		    <TableRow 
               		        android:layout_width="match_parent"
               		        android:weightSum="1"
							style="@style/HorizontalDividerLayout">
               		        <View
               		            android:layout_weight="1"
               		            style="@style/HorizontalDividerBar"/>               		        
               		    </TableRow>

               		    <!-- Penta Ends here -->
					               		    
               		    <!-- Measles Start Here -->
               		    <TableRow 
               		       style="@style/VaccineTitleRow">
               		        
               		        	<TextView
               		        	    android:id="@+id/txtViewMeaslesVaccine"
               		        	    style="@style/ThemeTextLeftPadding"
               		        	    android:text="@string/vacViewMeasles"
               		        	    android:textColor="@color/PaleBlue" />

               		     </TableRow>
               		   	<TableRow
               		        style="@style/VaccineCheckoxRow">>

               		        <CheckBox
               		            android:id="@+id/chkBoxM1"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewM1" >

							</CheckBox>

               		        <CheckBox
               		            android:id="@+id/chkBoxM2"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewM2" />
               		        
               		   	</TableRow>	 
               		   	<TableRow 
               		        android:layout_width="match_parent"
               		        android:weightSum="1"
							style="@style/HorizontalDividerLayout">
               		        <View
               		            android:layout_weight="1"
               		            style="@style/HorizontalDividerBar"/>               		        
               		    </TableRow>
               		    <!-- Measles Ends Here -->
               		    
               		    
               		    <!-- Polio Starts Here -->
               		    <TableRow 
               		        style="@style/VaccineTitleRow">
               		        
               		        <TextView
               		            android:id="@+id/txtViewPolioVaccine"
               		            style="@style/ThemeTextLeftPadding"
               		            android:text="@string/vacViewPolio"
               		            android:textColor="@color/PaleBlue" />
               		        
               		     </TableRow>
               		   	<TableRow
               		        style="@style/VaccineCheckoxRow">>

               		        <CheckBox
               		            android:id="@+id/chkBoxOPV0"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewOPV0" >

							</CheckBox>

               		        <CheckBox
               		            android:id="@+id/chkBoxOPV1"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewOPV1" />
               		        
               		        <CheckBox
               		            android:id="@+id/chkBoxOPV2"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewOPV2" />

               		        </TableRow>
               		        
               		        <TableRow
	               		       style="@style/VaccineCheckoxRow">>
               		   	
               		        <CheckBox
               		            android:id="@+id/chkBoxOPV3"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewOPV3" />
               		        
               		   	</TableRow>	 
               		   
               		    <TableRow 
               		        android:layout_width="match_parent"
               		        android:weightSum="1"
							style="@style/HorizontalDividerLayout">
               		        <View
               		            android:layout_weight="1"
               		            style="@style/HorizontalDividerBar"/>               		        
               		    </TableRow>
               		    
               		    <!-- Polio Ends Here -->
               		    
               		    <!-- PCV Starts Here -->
               		    <TableRow 
               		       style="@style/VaccineTitleRow">
               		        
            		        <TextView
            		            android:id="@+id/txtViewPCVVaccine"
            		            style="@style/ThemeTextLeftPadding"
            		            android:text="@string/vacViewPCV"
            		            android:textColor="@color/PaleBlue" />
               		        	
               		    </TableRow>
               		   	<TableRow
               		        style="@style/VaccineCheckoxRow">>

               		        <CheckBox
               		            android:id="@+id/chkBoxPCV1"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewPCV1" >

							</CheckBox>

               		        <CheckBox
               		            android:id="@+id/chkBoxPCV2"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewPCV2" />
               		        
               		        <CheckBox
               		            android:id="@+id/chkBoxPCV3"
               		            style="@style/VaccineCheckbox"
               		            android:text="@string/vacViewPCV3" />
               		        
               		   	</TableRow>	 
               		   	
               		   	<TableRow 
               		        android:layout_width="match_parent"
               		        android:weightSum="1"
							style="@style/HorizontalDividerLayout">
               		        <View
               		            android:layout_weight="1"
               		            style="@style/HorizontalDividerBar"/>               		        
               		    </TableRow>
               		    
               		    <!-- PCV Ends Here -->
               		    
               		</TableLayout>
               		
</LinearLayout>
