<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculateAgeAcitivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enrollment_label_Years"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <NumberPicker
                android:id="@+id/numberPickerYears"
                android:layout_width="wrap_content"
                android:layout_height="130dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enrollment_label_Months"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <NumberPicker
                android:id="@+id/numberPickerMonths"
                android:layout_width="wrap_content"
                android:layout_height="130dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enrollment_label_Weeks"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <NumberPicker
                android:id="@+id/numberPickerWeeks"
                android:layout_width="wrap_content"
                android:layout_height="130dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtVwStkCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enrollment_label_Days"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <NumberPicker
                android:id="@+id/numberPickerDays"
                android:layout_width="wrap_content"
                android:layout_height="130dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCalculateAge"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_calculate" 
        android:onClick="setAge"/>

</LinearLayout>